fixed mobile layout issue

--- a/src/App2.css
+++ b/src/App2.css
@@ -31,6 +31,11 @@ main {
     padding: 10px;
 }
 
+.menu {
+    text-align: center;
+    padding: 0;
+}
+
 .row {
     display: grid;
     grid-area: main;
